--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <h1>
     Covid 19
 </h1>
-    <h1 *ngFor="let item  data">
-        {{item.local_new_cases}}
+    <h1 *ngFor="let local_active_cases  data">
+        {{data.local_active_cases}}
     </h1>
+
+    
